<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.cardview.widget.CardView
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/white"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/signup_text_margin_top">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="6dp"
            android:text="@string/register" />

        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"

         >

            <EditText
                android:textColor="@color/black"
                android:id="@+id/et_insert_nama"
                style="@style/modifiedEditText"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"

            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/et_insert_username"
                style="@style/modifiedEditText"
               android:hint="User Name"
                android:textColor="@color/black"

                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="ID Pelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:visibility="visible">

            <EditText
                android:id="@+id/id_pelanggan"
                style="@style/modifiedEditText"
                android:hint="ID PLN PELANGGAN "
                android:textColor="@color/black"

                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="Mobile Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:visibility="visible">

            <EditText
                android:id="@+id/userPhone"
                style="@style/modifiedEditText"
                android:enabled="false"
                android:hint="Mobile Number"

                android:textColor="@color/black"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/et_insert_email"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:textColor="@color/black"

                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/et_insert_alamat"
                style="@style/modifiedEditText"
                android:hint="@string/alamat_hint"
                android:textColor="@color/black"

                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginLeft="8dp"
            android:text="Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:visibility="gone"
            style="@style/parent">

            <TextView
                style="@style/modifiedEditText"
                android:hint="Address"
                android:textColor="#000000"
                android:layout_marginLeft="12dp"
                android:maxLines="1" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/et_insert_address"
                style="@style/modifiedEditText"
                android:layout_marginLeft="10dp"
                android:background="@drawable/line_background2"
                android:hint="Address"
                android:maxLines="7"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_insert_address"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#121111"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_insert_password"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"

                android:maxLines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_insert_password_retype"
                style="@style/modifiedEditText"
                android:hint="@string/reg_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/design_default_color_primary"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/design_default_color_primary"
                    android:fontFamily="@font/ubunturegular"
                    android:onClick="confirmRegister"
                    android:text="REGISTER"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

        <TextView
            android:id="@+id/textview_login"
            style="@style/parent"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:gravity="right"
            android:onClick="viewRegisterClicked"
            android:text="@string/signup_login_hint"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="bold" />



</androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
