<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/white"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">


    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/ubunturegular"
            android:text="INPUT PHONE &amp; PASSWORD"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relativ"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinnerNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:gravity="bottom" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_toRightOf="@id/spinnerNumber">

                <EditText
                    android:layout_gravity="right"
                    android:gravity="left"
                    android:id="@+id/editTextPhoneLogin"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_phone_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:visibility="invisible"
                android:id="@+id/spinnerNumbera"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:gravity="bottom" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_toRightOf="@id/spinnerNumbera"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:passwordToggleEnabled="true">

                <EditText

                    android:id="@+id/editTextPasswordLogin"
                    style="@style/modifiedEditText"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>


        <TextView
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:onClick="viewForgotPAssword"
            android:text="Forgot Password?"
            android:textColor="@color/design_default_color_primary"
            android:textSize="@dimen/newsMoreTextSize"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/design_default_color_primary"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/design_default_color_primary"
                    android:onClick="confirmLogin"
                    android:text="LOGIN"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textview_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>